--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server"
+    "start": "nodemon app",
+    "test": "mocha test/test"
   },
   "dependencies": {
     "archiver": "^3.0.0",
@@ -13,11 +14,13 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "mocha": "^5.2.0",
     "mongoose": "^5.3.13",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "pug": "^2.0.3",
     "smart-zip": "0.0.9",
+    "supertest": "^3.3.0",
     "swig": "^1.4.2"
   }
 }
