--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pug": "^2.0.3",
     "smart-zip": "0.0.9",
     "supertest": "^3.3.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "nodemon": "^1.18.6"
   }
 }
