--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
@@ -18,10 +19,12 @@
     "mongoose": "^5.3.13",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "nodemailer": "^4.7.0",
+    "nodemon": "^1.18.6",
+    "pdfkit": "^0.8.3",
     "pug": "^2.0.3",
     "smart-zip": "0.0.9",
     "supertest": "^3.3.0",
-    "swig": "^1.4.2",
-    "nodemon": "^1.18.6"
+    "swig": "^1.4.2"
   }
 }
